infrastructure/manifests/platform-tempo.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.30.0-standalone-strict/all.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo
  namespace: platform
  labels:
    app: tempo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      labels:
        app: tempo
    spec:
      containers:
        - name: tempo
          image: platform-tempo
          imagePullPolicy: IfNotPresent
          args:
            - -config.file=/etc/tempo/tempo.yaml
          ports:
            - name: http-query
              containerPort: 3200
            - name: otlp-grpc
              containerPort: 4317
            - name: otlp-http
              containerPort: 4318
          resources:
            requests:
              memory: '128Mi'
              cpu: '50m'
            limits:
              memory: '512Mi'
              cpu: '300m'
          volumeMounts:
            - name: tempo-data
              mountPath: /tmp/tempo
      volumes:
        - name: tempo-data
          persistentVolumeClaim:
            claimName: tempo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: tempo
  namespace: platform
spec:
  ports:
    - name: http-query
      port: 3200
      targetPort: 3200
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
  selector:
    app: tempo
