infrastructure/manifests/docs-docusaurus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-docusaurus
  namespace: docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs-docusaurus
  template:
    metadata:
      labels:
        app: docs-docusaurus
    spec:
      containers:
        - name: docusaurus
          image: docs-docusaurus
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2048Mi
---
apiVersion: v1
kind: Service
metadata:
  name: docs-docusaurus
  namespace: docs
spec:
  ports:
    - port: 80
      targetPort: 3002
  selector:
    app: docs-docusaurus
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docs-docusaurus-ingress
  namespace: docs
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: docs-dev.tupynambalucas.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docs-docusaurus
                port:
                  number: 80
