infrastructure/manifests/platform-headlamp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headlamp
  namespace: platform
  labels:
    app: headlamp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headlamp
  template:
    metadata:
      labels:
        app: headlamp
    spec:
      serviceAccountName: headlamp
      containers:
        - name: headlamp
          image: platform-headlamp
          imagePullPolicy: IfNotPresent
          args:
            - '-kubeconfig=/home/headlamp/.kube/config/config.yaml'
            - '-in-cluster'
          ports:
            - containerPort: 4466
          resources:
            requests:
              memory: '64Mi'
              cpu: '25m'
            limits:
              memory: '256Mi'
              cpu: '200m'
---
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: platform
spec:
  ports:
    - port: 80
      targetPort: 4466
  selector:
    app: headlamp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: platform
spec:
  ingressClassName: traefik
  rules:
    - host: headlamp-dev.tupynambalucas.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
