infrastructure/manifests/platform-turbocache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: turbocache
  namespace: platform
  labels:
    app: turbocache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: turbocache
  template:
    metadata:
      labels:
        app: turbocache
    spec:
      containers:
        - name: turbocache
          image: platform-turbocache
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: '64Mi'
              cpu: '25m'
            limits:
              memory: '256Mi'
              cpu: '200m'
          volumeMounts:
            - name: cache-volume
              mountPath: /data
      volumes:
        - name: cache-volume
          persistentVolumeClaim:
            claimName: turbocache-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: turbocache
  namespace: platform
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: turbocache
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: turbocache-ingress
  namespace: platform
spec:
  ingressClassName: traefik
  rules:
    - host: turbocache-dev.tupynambalucas.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: turbocache
                port:
                  number: 3000
